tests/NormalTests/paczka1/fuzzy1/66187588.err
Error in line 7: Pbd9Q3W A605 78,98
Error in line 20: 3zaXl6he3 A219 1Y1,9
Error in line 14: A605 A219 19,7
